update by sobhan

--- a/.env
+++ b/.env
@@ -34,3 +34,7 @@ PUSHER_APP_SECRET=
 
 NEXMO_KEY=21c2a8b2
 NEXMO_SECRET=9cb39c4ed28c6508
+
+G+_CLIENT_ID = 134597549822-pgp87uhaqpsaa4m2a3671k53g106dk82.apps.googleusercontent.com
+G+_CLIENT_SECRET = wm7Wwbw4xrBDmtsVgm4JdCBZ
+G+_REDIRECT = 'http://localhost:8000/admin/callback/google'
