commit env file for change fb redirect urls https://sobhanphotography.localhost.com/admin/callback/facebook

--- a/.env
+++ b/.env
@@ -41,4 +41,4 @@ G+_REDIRECT = 'http://localhost:8000/admin/callback/google'
 
 FB_CLIENT_ID = 2069533506639361
 FB_CLIENT_SECRET = 0fb04fe3e72b46ec838fbf3e26d807d7
-FB_REDIRECT = 'http://localhost:8000/admin/callback/facebook'
+FB_REDIRECT = 'https://sobhanphotography.localhost.com/admin/callback/facebook'
