--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ NEXMO_SECRET=9cb39c4ed28c6508
 
 G+_CLIENT_ID = 134597549822-pgp87uhaqpsaa4m2a3671k53g106dk82.apps.googleusercontent.com
 G+_CLIENT_SECRET = wm7Wwbw4xrBDmtsVgm4JdCBZ
-G+_REDIRECT = 'http://localhost:8000/admin/callback/google'
+G+_REDIRECT = 'https://sobhanphotography.localhost.com/admin/callback/google'
 
 FB_CLIENT_ID = 2069533506639361
 FB_CLIENT_SECRET = 0fb04fe3e72b46ec838fbf3e26d807d7
